--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -81,7 +81,7 @@
 	<tr>
 		<td width="160px">
 			<div class="drum-button-wrapper">
-				<div class="drum-button drum-label">KICK</div>
+				<div id="kick" class="drum-button drum-label">KICK</div>
 			</div>
 		</td>
 		<!-- Steps -->
@@ -171,7 +171,7 @@
 	<tr>
 		<td>
 			<div class="drum-button-wrapper drum-label-wrapper">
-				<div class="drum-button drum-label">SNARE</div>
+				<div id="snare" class="drum-button drum-label">SNARE</div>
 			</div>
 		</td>
 		<!-- Steps -->
@@ -261,7 +261,7 @@
 	<tr>
 		<td>
 			<div class="drum-button-wrapper drum-label-wrapper">
-				<div class="drum-button drum-label">HIHAT</div>
+				<div id="hihat" class="drum-button drum-label">HIHAT</div>
 			</div>
 		</td>
 		<!-- Steps -->
@@ -353,12 +353,17 @@
 	<tr>
 		<td width="160px">
 			<div class="drum-button-wrapper">
-				<div class="drum-button drum-label">PLAY</div>
+				<div id="play" class="drum-button drum-label">PLAY / PAUSE</div>
 			</div>
 		</td>
 		<td width="160px">
 			<div class="drum-button-wrapper">
-				<div class="drum-button drum-label">GENERATE</div>
+				<div class="drum-button drum-label">STOP</div>
+			</div>
+		</td>
+		<td width="160px">
+			<div class="drum-button-wrapper">
+				<div id="generate" class="drum-button drum-label">GENERATE</div>
 			</div>
 		</td>
 
@@ -375,6 +380,8 @@
 	</tr>
 </table>
 
+
+<script src="https://code.createjs.com/soundjs-0.6.1.min.js"></script>
 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 <script src="ai909.js"></script>
 </body>
