iOS compatibility stuff

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<!-- TODO <link rel="icon" href="../../favicon.ico"> -->
@@ -17,14 +17,14 @@
 
 <body>
 
-<div style="padding-bottom: 5px;">
+<div style="padding-bottom: 5px; padding-top: 80px;">
 	<span style="color: #818181; font-size: 50px; font-family: tr-909regular">AI-909</span>
 	<span style="color: #818181; font-size: 30px; float: right; font-family: tr-909regular; padding-top: 5px;">Intelligent Rhythm Composer</span>
 </div>
 <table id="indicator-lights" class="sequencer">
 	<!-- Step Indicator -->
 	<tr height="16px">
-		<td width="150px">
+		<td width="120px">
 
 		</td>
 		<!-- Steps -->
@@ -83,7 +83,7 @@
 
 	<!-- Kick -->
 	<tr>
-		<td width="150px">
+		<td width="120px">
 			<div class="drum-button-wrapper">
 				<div id="kick" class="drum-button drum-label">KICK</div>
 			</div>
@@ -173,7 +173,7 @@
 
 	<!-- Snare -->
 	<tr>
-		<td width="150px">
+		<td width="120px">
 			<div class="drum-button-wrapper drum-label-wrapper">
 				<div id="snare" class="drum-button drum-label">SNARE</div>
 			</div>
@@ -263,7 +263,7 @@
 
 	<!-- Hihat -->
 	<tr>
-		<td width="150px">
+		<td width="120px">
 			<div class="drum-button-wrapper drum-label-wrapper">
 				<div id="hihat" class="drum-button drum-label">HIHAT</div>
 			</div>
