--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -17,7 +17,7 @@
 
 <body>
 
-<div style="padding-bottom: 5px; padding-top: 80px;">
+<div style="padding-bottom: 5px;">
 	<span style="color: #818181; font-size: 50px; font-family: tr-909regular">AI-909</span>
 	<span style="color: #818181; font-size: 30px; float: right; font-family: tr-909regular; padding-top: 5px;">Intelligent Rhythm Composer</span>
 </div>
@@ -355,17 +355,33 @@
 <table id="controls" class="sequencer">
 
 	<tr>
-		<td style="text-align: center; width: 25%">
-			<div id="play" class="control">
-				<span id="play-icon" class="glyphicon glyphicon-play"></span>
-			</div>
-
-			<div id="stop" class="control">
-				<span class="glyphicon glyphicon-stop"></span>
-			</div>
-
-		<td style="text-align: center; width: 25%">
+		<td style="text-align: center; width: 18%">
 			<table>
+				<tr>
+					<td>
+						<div>
+							<div id="play" class="control">
+								<span id="play-icon" class="glyphicon glyphicon-play"></span>
+							</div>
+
+							<div id="stop" class="control">
+								<span class="glyphicon glyphicon-stop"></span>
+							</div>
+						</div>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<div class="button-label">
+							Playback
+						</div>
+					</td>
+				</tr>
+			</table>
+		</td>
+
+		<td style="text-align: center; width: 30%">
+			<table style="margin: auto;">
 				<tr>
 					<td style="text-align: center">
 						<div id="lower-bpm" class="control">
@@ -385,46 +401,90 @@
 						</div>
 					</td>
 				</tr>
-			</table>
-		</td>
-
-		<td style="text-align: center; width: 25%">
-			<div id="generate" class="control">
-				<span class="glyphicon glyphicon-refresh"></span>
-			</div>
-
-			<div id="mutate" class="control">
-				<span class="glyphicon glyphicon-random"></span>
-			</div>
-
-			<div id="learn" class="control">
-				<span class="glyphicon glyphicon-upload"></span>
-			</div>
-
-		</td>
-
-		<td style="text-align: center; width: 25%">
-			<table>
 				<tr>
-					<td style="text-align: center">
-						<div id="lower-bank" class="control">
-							<span class="glyphicon glyphicon-minus"></span>
-						</div>
-					</td>
-
-					<td style="text-align: center">
-						<div style="display: inline-block">
-							<span id="bank" style="font-family: 'DigitalCounter7'; font-weight: bold; font-size: 50px; text-shadow:0 0 30px #CC0000; color: #CC0000">01</span>
-						</div>
-					</td>
-
-					<td style="text-align: center">
-						<div id="increase-bank" class="control">
-							<span class="glyphicon glyphicon-plus"></span>
+					<td colspan="3">
+						<div class="button-label">
+							Beats per Minute
 						</div>
 					</td>
 				</tr>
 			</table>
+		</td>
+
+		<td style="text-align: center; width: 26%">
+			<table style="margin: auto;">
+				<tr>
+					<td style="text-align: center">
+						<div id="generate" class="control">
+							<span class="glyphicon glyphicon-refresh"></span>
+						</div>
+					</td>
+
+					<td style="text-align: center">
+						<div id="mutate" class="control">
+							<span class="glyphicon glyphicon-random"></span>
+						</div>
+					</td>
+
+					<td style="text-align: center">
+						<div id="learn" class="control">
+							<span class="glyphicon glyphicon-upload"></span>
+						</div>
+					</td>
+				</tr>
+				<tr>
+					<td style="text-align: center">
+						<div class="button-label">
+							Generate
+						</div>
+					</td>
+
+					<td style="text-align: center">
+						<div class="button-label">
+							Mutate
+						</div>
+					</td>
+
+					<td style="text-align: center">
+						<div class="button-label">
+							Learn
+						</div>
+					</td>
+				</tr>
+			</table>
+		</td>
+
+		<td style="text-align: center; width: 26%">
+			<div>
+				<table style="margin: auto;">
+					<tr>
+						<td style="text-align: center">
+							<div id="lower-bank" class="control">
+								<span class="glyphicon glyphicon-minus"></span>
+							</div>
+						</td>
+
+						<td style="text-align: center">
+							<div style="display: inline-block">
+								<span id="bank" style="font-family: 'DigitalCounter7'; font-weight: bold; font-size: 50px; text-shadow:0 0 30px #CC0000; color: #CC0000">01</span>
+							</div>
+						</td>
+
+						<td style="text-align: center">
+							<div id="increase-bank" class="control">
+								<span class="glyphicon glyphicon-plus"></span>
+							</div>
+						</td>
+					</tr>
+					<tr>
+						<td colspan="3">
+							<div class="button-label">
+								Memory Location
+							</div>
+						</td>
+					</tr>
+				</table>
+			</div>
 		</td>
 
 	</tr>
